feat(ux): move actions to footer

--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
 
   <body>
     <header>
-      <button id="getAddressesButton">Get addresses</button>
-
-      Batch size of
-      <input type="number" name="batchSize" id="batchSize" value="499" />
-      addresses &nbsp;
-
-      <button id="fromTeamReport">From Team report</button>
+      <h1>Mail Spammer List</h1>
     </header>
 
-    <div class="container">
+    <main class="container">
       <div class="list">
         <h2>Original</h2>
 
@@ -39,7 +33,17 @@
           >0</span
         >
       </div>
-    </div>
+    </main>
+
+    <footer>
+      <button id="getAddressesButton">Get addresses</button>
+
+      Batch size of
+      <input type="number" name="batchSize" id="batchSize" value="499" />
+      addresses &nbsp;
+
+      <button id="fromTeamReport">From Team report</button>
+    </footer>
   </body>
 
   <script src="main.js"></script>
